Bug 366590 - Broken command when trying to edit software sources
Summary: Broken command when trying to edit software sources
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-10 14:31 UTC by KDE Neon user
Modified: 2016-08-20 20:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description KDE Neon user 2016-08-10 14:31:01 UTC
The software sources editor won't open.

Reproducible: Always

Steps to Reproduce:
Settings -> Configure Software Sources

Actual Results:  
The password prompt informs that the following command is about to be executed:

"--attach 105854757 --dont-update


Some typo in the code must have broken the full command.
Comment 1 KDE Neon user 2016-08-10 14:31:43 UTC
Muon 5.6.0
KDE Neon 5.7 (user edition)
Comment 2 Carlo Vanini 2016-08-11 13:47:13 UTC
Thanks for reporting, please install the package software-properties-kde.
Comment 3 KDE Neon user 2016-08-11 15:48:02 UTC
@Carlo installing it solved the problem. Thank you.

Are you going to add that package as a dependency?
Comment 4 Carlo Vanini 2016-08-11 19:45:33 UTC
This must be fixed in packaging. Reported here: https://bugs.launchpad.net/ubuntu/+source/muon/+bug/1612392

I will consider adding a message in Muon when software-properties-kde is not found.
Comment 5 Carlo Vanini 2016-08-20 20:59:28 UTC
Git commit ca1379c2f8041f775625255018463a25f9c782b9 by Carlo Vanini.
Committed on 20/08/2016 at 20:23.
Pushed by vanini into branch 'master'.

show error message if software-properties-kde cannot be found

Settings -> "Configure Software Sources" invokes the external program
software-properties-kde, if it is not found show an error message.

M  +12   -0    src/muonapt/QAptActions.cpp

http://commits.kde.org/muon/ca1379c2f8041f775625255018463a25f9c782b9