show error message if software-properties-kde cannot be found

Settings -> "Configure Software Sources" invokes the external program
software-properties-kde, if it is not found show an error message.

BUG: 366590